tests/specs/ecosystem/bureaudouble_forks/aria_hidden/0_0_1.test
bureaudouble-forks/aria-hidden/0.0.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Element'.
export const hideOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => {
                                           ~~~~~~~
    at file://<tmpdir>/src/index.ts:9:44

TS2304 [ERROR]: Cannot find name 'Element'.
export const hideOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => {
                                                     ~~~~~~~
    at file://<tmpdir>/src/index.ts:9:54

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const hideOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => {
                                                                             ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:9:78

TS2304 [ERROR]: Cannot find name 'Element'.
export const inertOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => {
                                            ~~~~~~~
    at file://<tmpdir>/src/index.ts:19:45

TS2304 [ERROR]: Cannot find name 'Element'.
export const inertOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => {
                                                      ~~~~~~~
    at file://<tmpdir>/src/index.ts:19:55

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const inertOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => {
                                                                              ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:19:79

TS2304 [ERROR]: Cannot find name 'Element'.
export const suppressOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => ({}) as never;
                                               ~~~~~~~
    at file://<tmpdir>/src/index.ts:33:48

TS2304 [ERROR]: Cannot find name 'Element'.
export const suppressOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => ({}) as never;
                                                         ~~~~~~~
    at file://<tmpdir>/src/index.ts:33:58

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const suppressOthers = (originalTarget: Element | Element[], parentNode?: HTMLElement, markerName?: string): Undo => ({}) as never;
                                                                                 ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:33:82

Found 9 errors.

error: Type checking failed.

